# OC

./: .gitignore  README.md  Коллок_№1_В5_Щербаченя_Михаил.docx
Colloquium_3/: README.md
Colloquium_3/Task_1/: .gitignore
Santa/: .gitignore  Santa.sln
Santa/Santa/: Santa.cpp  Santa.vcxproj  Santa.vcxproj.filters  log.txt
lab_1/: lab_1.sln
lab_1/Lab_1_Test/: Lab_1_Test.cpp  Lab_1_Test.vcxproj  Lab_1_Test.vcxproj.filters
lab_1/lab_1/: Source.cpp  lab_1.vcxproj
lab_2/: lab_2.sln
lab_2/Child/: Child.vcxproj  Child.vcxproj.filters  Source.cpp
lab_2/GUnitTest/: GUnitTest.vcxproj  test.cpp
lab_2/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
lab_2/lab_2/: Source.cpp  lab_2.vcxproj
lab_2/main/: Source.cpp  main.vcxproj
lab_2_with_CMake/: .gitignore  CMakeLists.txt
lab_2_with_CMake/Child/: CMakeLists.txt  MergeSort.cpp  MergeSort.h  child.cpp
lab_2_with_CMake/GUnitTest/: CMakeLists.txt  test.cpp
lab_2_with_CMake/Main/: CMakeLists.txt
lab_2_with_CMake/Parent/: CMakeLists.txt  parent.cpp
lab_3/: .gitignore  lab_3.sln
lab_3/Lab_3_Test/: Lab_3_Test.cpp  Lab_3_Test.vcxproj
lab_3/lab_3/: Header.h  Source.cpp  Variables.h  lab_3.vcxproj
lab_4/: lab_4.sln
lab_4/Employee/: Employee.cpp  Employee.vcxproj
lab_4/Lab_4_Test/: Lab_4_Test.cpp  Lab_4_Test.vcxproj  Lab_4_Test.vcxproj.filters
lab_4/Test/: Test.vcxproj
lab_4/lab_4/: Boss.cpp  lab_4.vcxproj
lab_5/: lab_5.sln
lab_5/Alfavit/: Alfavit.cpp  Alfavit.vcxproj
lab_5/Lab_5_Test/: Lab_5_Test.cpp  Lab_5_Test.vcxproj  Lab_5_Test.vcxproj.filters
lab_5/lab_5/: Server.cpp  (+1 more)
lab_6/: lab_6.sln
(+8 files in other folders)
